# Jungle

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  github_action_build.sh  manifest.sh  prepare.sh  travis_build.sh
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  FindSnappy.cmake
docs/: basic_operations.md  how_to_use.md  log_store_mode.md  overview.md  seq_numbers.md
examples/: CMakeLists.txt  README.md  example_get_set_del.cc  example_iterator.cc  example_iterator_adv.cc  example_log_store_mode.cc  example_snapshot_checkpoint.cc  example_snapshot_instant.cc
include/libjungle/: db_config.h  db_stats.h  global_batch.h  iterator.h  jungle.h  jungle_builder.h  keyvalue.h  params.h  record.h  sized_buf.h  status.h
scripts/: runtests.sh
src/: ashared_ptr.h  avltree.cc  avltree.h  backtrace.h  bloomfilter.cc  bloomfilter.h  cmd_handler.cc  cmd_handler.h  compactor.cc  compactor.h  configs.h  crc32.cc  crc32.h  db_config.cc  db_group.cc  db_internal.h  db_manifest.cc  db_manifest.h  db_mgr.cc  db_mgr.h  endian_encode.h  event_awaiter.h  fileops_base.h  fileops_directio.cc  fileops_directio.h  fileops_posix.cc  fileops_posix.h  flusher.cc  flusher.h  generic_bitmap.h  global_batch.cc  hex_dump.h  histogram.h  internal_helper.cc  internal_helper.h  iterator.cc  jungle.cc  jungle_builder.cc  latency_collector.h  list.cc  (+44 more)
tests/: CMakeLists.txt  config_test_common.h  test_common.h
tests/bench/: adapter_selector.h  bench.cc  bench_config.h  bench_worker.h  db_adapter.h  db_adapter_jungle.cc  db_adapter_jungle.h  dist_def.h  dist_def_test.cc  example_config.json  json.hpp  json_common.h  json_to_dist_def.h
tests/jungle/: atomic_batch_test.cc  basic_op_test.cc  builder_test.cc  casual_test.cc  compaction_test.cc  compression_test.cc  corruption_test.cc  custom_cmp_test.cc  custom_mani_verifier.cc  disabling_seq_index_test.cc  dummy_compression.h  jungle_test_common.h  key_itr_test.cc  large_test.cc  level_extension_test.cc  log_reclaim_test.cc  mt_test.cc  mt_write_stress_test.cc  nearest_search_test.cc  seq_itr_test.cc  snapshot_test.cc  sync_and_flush_test.cc
tests/robust/: basic_robust_child.cc  basic_robust_main.cc
tests/stress/: compactor_stress_test.cc  flush_stress_test.cc  iterator_stress_test.cc  log_reclaim_stress_test.cc  many_log_files_test.cc  purge_stress_test.cc
tests/unit/: crc32_test.cc  fileops_directio_test.cc  fileops_test.cc  keyvalue_test.cc  memtable_test.cc  table_lookup_booster_test.cc  table_test.cc
tools/: CMakeLists.txt  bloomfilter_generator.cc  jungle_builder.h  jungle_checker.cc  mutable_table_mgr.h
